--- a/pond.html
+++ b/pond.html
@@ -29,4 +29,25 @@
     <br />
     <a href = "pond.html">Pond </a>
 </body>
+<body>
+    <div class="card">
+        <img src = "http://localhost:8080/ducks/1/image" alt="Avatar" style="width:100%">
+        <div class = "container">
+            <h4><b>1</b></h4>
+            <p>Mallard</p>
+        </div>
+
+        <img src = "http://localhost:8080/ducks/5/image" alt="Avatar" style="width:100%">
+        <div class = "container">
+            <h4><b>5</b></h4>
+            <p>Mallard</p>
+        </div>
+
+        <img src = "http://localhost:8080/ducks/4/image" alt="Avatar" style="width:100%">
+        <div class = "container">
+            <h4><b>4</b></h4>
+            <p>Redhead</p>
+        </div>
+    </div>
+</body>
 </html>
