--- a/search.html
+++ b/search.html
@@ -45,12 +45,20 @@
     </table>
 
     <script>
-
-       let ducks = [];
+        const axios = require('axios');
+       let ducks = [{id: 1, type: "Mallard"},
+           {id: 2, type: "Redhead"},];
 
        async function getAll() {
            let host = "http://localhost:8080"
            //TODO
+           try {
+               const response = await axios.get('${host}/ducks');
+               ducks = response.data;
+           } catch (error) {
+               console.error('Error fetching ducks:', error);
+               ducks = [];
+           }
        }
 
       async function search() {
